<resources>
    <string name="app_name">便當王</string>
    <string name="location">地點</string>
    <string name="sort">排序方式</string>
    <string name="filter">過濾</string>
    <string name="menu_search">搜尋</string>
    <string name="open">開啟</string>
    <string name="close">關閉</string>
    <string name="map">地圖</string>
    <string name="list">清單</string>
    <string name="orderNow">立即訂購</string>
    <string name="undo">還原</string>
    <string name="clear">清除</string>
    <string name="member_number">帳號</string>
    <string name="password">密碼</string>
    <string name="passwordCheck">密碼確認</string>
    <string name="sex">性別</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="email">Email</string>
    <string name="confirm">確認</string>
    <string name="cancel">取消</string>
    <string name="resetpassword">重設密碼</string>
    <string name="belongstore">所屬店家</string>
    <string name="commen">已發表評論</string>
    <string name="status">狀態</string>
    <string name="username">用戶名稱</string>
    <string name="address">地址</string>
    <string name="workertime">營業時間</string>
    <string name="parking">停車資訊</string>
    <string name="phone">電話號碼</string>
    <string name="decorating">店內照片</string>
    <string name="menu">菜單照片</string>
    <string name="update">上傳</string>
    <string name="registered">會員註冊</string>
    <string name="storeName">店家名稱</string>
    <string name="storeAddress">店家地址</string>
    <string name="add">新增</string>
    <string name="Previous_page">上一頁</string>
    <string name="pushmanage">推播管理</string>
    <string name="push_name">推播名稱</string>
    <string name="send_time">發送時間</string>
    <string name="push_content">推播內容</string>
    <string name="addpush">新增推播</string>
    <string name="nickname">暱稱</string>
    <string name="login">登入</string>
    <string name="register">會員註冊</string>
    <string name="becomeStore">成為店家</string>
    <string name="about">關於</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="mainActivity">主頁</string>
    <string name="haveStore">便當王已經有您的店家</string>
    <string name="notHaveStore">便當王還沒有您的店家</string>
    <string name="find">查詢</string>
    <string name="check">確認</string>
    <string name="findStoreHint">請任選一個項目填寫後按下查詢\n確認查詢結果無誤後請按下確認</string>
    <string name="bussinessTime">營業時間</string>
    <string name="storeInfo">店內資訊</string>
    <string name="touchToEdit">點一下編輯</string>
    <string name="next">下一步</string>
    <string name="lookOpponent">查看對手</string>
    <string name="banMemberId">停權會員ID</string>
    <string name="banReason">停權原因</string>
    <string name="reportReason">檢舉原因</string>
    <string name="banCancle">取消停權</string>
    <string name="pushID">推播ID</string>
    <string name="pushShop">推播店家</string>
    <string name="pushTime">推播時間</string>
    <string name="banContent">違規內容</string>
    <string name="allow">允許</string>
    <string name="refuse">拒絕</string>
    <string name="reportId">回報ID</string>
    <string name="reportUser">回報人</string>
    <string name="commentContent">評論內容</string>
    <string name="ban">停權</string>
    <string name="delete">刪除</string>
    <string name="repoteType">回報類型</string>
    <string name="reportContent">回報內容</string>
    <string name="deleteComment">刪除評論</string>
    <string name="appealId">申訴ID</string>
    <string name="appealContent">申訴內容</string>
    <string name="appealReply">申訴回覆</string>
    <string name="reply">回覆</string>
    <string name="look">查看</string>
    <string name="unban">解除</string>
    <string name="storeLogin">店家登入</string>
    <string name="memberLogin">會員登入</string>
    <string name="logout">登出</string>
    <string name="hello">您好，</string>
    <string name="edidInfo">修改資料</string>
    <string name="findOrders">查看訂單</string>
    <string name="favorite">我的最愛</string>
    <string name="addStore">新增店家</string>
    <string name="editStore">編輯店家</string>
    <string name="lookStore">查看店家</string>
    <string name="storedPoint">儲值點數</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="chooseCountry">請選擇縣市</string>
    <string name="chooseSort">請選擇排序方式</string>
    <string name="chooseFilter">請選擇過濾方式</string>
    <string name="OldPassword">舊密碼</string>
    <string name="distance">距離</string>
    <string name="rank">評分</string>
    <string name="price">售價</string>
    <string name="business">營業中</string>
    <string name="km">公里</string>
    <string name="canNotGetLocation">無法取得定位資訊</string>
    <string name="gettingLocation">正在取得定位資訊</string>
    <string name="loginSuccessful">登入成功</string>
    <string name="EditSuccessful">修改成功</string>
    <string name="emailError">Email錯誤</string>
    <string name="passwordError">密碼錯誤</string>
    <string name="canNotUse">不適用</string>
    <string name="chooseTime">選擇時間</string>
    <string name="editMenu">編輯菜單</string>
    <string name="nameError">請輸入店家名稱</string>
    <string name="addressError">地址輸入錯誤</string>
    <string name="phoneError">請輸入電話號碼</string>
    <string name="businessHoursError">請至少填寫一組營業時間</string>
    <string name="mealName">餐點名稱</string>
    <string name="addSequence">新增在</string>
    <string name="addMeal">新增餐點</string>
    <string name="editMeal">編輯餐點</string>
    <string name="pleaseInputMealName">請輸入名稱</string>
    <string name="pleaseInputMealPrice">請輸入餐點價格</string>
    <string name="pleaseInputOneMeal">請至少加入一個餐點</string>
    <string name="first">第一個</string>
    <string name="moveTo">移動到</string>
    <string name="someonePosition">的位置</string>
    <string name="editPhoto">編輯相片</string>
    <string name="chooseMainPhoto">請選擇主要店家相片</string>
    <string name="chooseOtherPhoto">請選擇其他店家相片</string>
    <string name="quickChoose">快速選擇</string>
    <string name="errorPermission">無法取得權限</string>
    <string name="pleaseInputPhoto">請至少上傳店家主要照片</string>
    <string name="addStoreSuccessful">新增店家成功，審核時間約2~3天，\n請耐心等待</string>
    <string name="addStoreFail">新增店家失敗，請再試一次</string>
    <string name="order">訂購餐點</string>
    <string name="reviewStore">審核店家</string>
    <string name="loadFail">載入失敗，請檢查網路狀態</string>
    <string name="pickNumber">請選擇數量</string>
    <string name="NewPassword">新密碼</string>
    <string name="PleaseCheckPassword">請確認密碼</string>
    <string name="NewPasswordAndCheckPassword">新密碼與確認密碼必須一致</string>
    <string name="deleteFail">刪除失敗，請檢查網路狀態</string>
    <string name="deleteSuc">刪除成功</string>
    <string name="addFail">新增失敗，請檢查網路狀態</string>
    <string name="addSuc">新增成功</string>
    <string name="editFail">編輯失敗，請檢查網路狀態</string>
    <string name="editSuc">編輯成功</string>
    <string name="complete">完成</string>
    <string name="hint">小提示</string>
    <string name="callHint">電話播出後開啟擴音，再將視窗切回便當王就可以一邊看統計資訊一邊訂購唷！</string>
    <string name="imageUpdateSuc">照片更新成功</string>
    <string name="imageUpdateFail">照片更新失敗，請檢查網路狀態</string>
    <string name="previewStoreInfo">審核店家資訊</string>
    <string name="previewStoreMenu">審核店家菜單</string>
    <string name="previewStorePhoto">審核店家照片</string>
    <string name="banMember">停權會員</string>
    <string name="storeError">店家錯誤</string>
    <string name="reportComment">檢舉評論</string>
    <string name="previewPush">審核推播</string>
    <string name="appeal">發表申訴</string>
    <string name="note">備註</string>
    <string name="title_activity_home_maps">Map</string>
    <string name="research">重新搜尋</string>
    <string name="cannotSearchStore">找不到這個店家</string>
    <string name="findSuc">查詢成功</string>
    <string name="findFail">查詢失敗</string>
    <string name="storeRegisterSuc">註冊成功，審核時間約2~3天，\n請耐心等待</string>
    <string name="storeRegisterFail">註冊失敗，請檢查網路狀態</string>
    <string name="errorReport">錯誤回報</string>
    <string name="favoriteFull">我的最愛已滿，無法新增</string>
    <string name="addFavorite">加到我的最愛</string>
    <string name="removeFavorite">移除我的最愛</string>
    <string name="removeSuc">移除成功</string>
    <string name="removeFail">移除失敗</string>
    <string name="title">標題</string>
    <string name="content">內容</string>
    <string name="pleaseEnterTitle">請輸入標題</string>
    <string name="pleaseEnterContent">請輸入內容</string>
    <string name="appelaSuc">申訴成功</string>
    <string name="appelaFail">申訴失敗</string>
    <string name="appelaComment">檢舉評論</string>
    <string name="save">儲存</string>
    <string name="dealComplete">處理完成</string>
    <string name="enterDealResult">請輸入處理結果</string>
    <string name="checkStoreError">查看店家錯誤</string>
    <string name="connectError">連線失敗，請檢查網路狀態</string>
    <string name="checkMember">查看會員</string>
    <string name="point">點數</string>
    <string name="state">狀態</string>
    <string name="memberAppeal">會員申訴</string>
    <string name="storeAppeal">店家申訴</string>
    <string name="checkComment">查看評論</string>
    <string name="cannotFindComment">找不到評論，評論可能已被刪除</string>
    <string name="editPush">編輯推播</string>
    <string name="editPushNeedRe">推播審核後若要重新編輯\n需要再審核一次，您確定嗎？</string>
    <string name="noPoint">點數不足，無法推播</string>
    <string name="pleaseEnterPoint">請輸入點數</string>
    <string name="checkError">查看錯誤</string>
    <string name="payPoint">支付點數</string>
</resources>